[gd_scene load_steps=5 format=3 uid="uid://bqcql3h7t1xu4"]

[ext_resource type="Script" path="res://ui/battle_menu_manager.gd" id="1_trhjk"]
[ext_resource type="PackedScene" uid="uid://b7pdbhyuurbn5" path="res://ui/battle_menu.tscn" id="2_mwdnl"]
[ext_resource type="PackedScene" uid="uid://cub7ww8tasctp" path="res://ui/scroll_list.tscn" id="3_lhnd5"]
[ext_resource type="PackedScene" uid="uid://ctvy63bh3b158" path="res://ui/context_menu.tscn" id="4_8g0i2"]

[node name="BattleMenuManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_trhjk")

[node name="BattleMenu" parent="." instance=ExtResource("2_mwdnl")]
unique_name_in_owner = true
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 68.0
offset_top = 184.0
offset_right = 252.0
offset_bottom = 214.0
grow_horizontal = 1
grow_vertical = 1

[node name="MenuPosition" type="Marker2D" parent="BattleMenu"]
position = Vector2(14, -4)

[node name="MenuContainer" type="HBoxContainer" parent="BattleMenu/MenuPosition"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -44.0
offset_right = 238.0
grow_vertical = 0

[node name="ActionList" parent="BattleMenu/MenuPosition/MenuContainer" instance=ExtResource("3_lhnd5")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="ItemList" parent="BattleMenu/MenuPosition/MenuContainer" instance=ExtResource("3_lhnd5")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="ContextMenu" parent="BattleMenu/MenuPosition/MenuContainer" instance=ExtResource("4_8g0i2")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[connection signal="menu_option_selected" from="BattleMenu" to="." method="_on_battle_menu_menu_option_selected"]
[connection signal="resource_selected" from="BattleMenu/MenuPosition/MenuContainer/ActionList" to="." method="_on_action_list_resource_selected"]
[connection signal="resource_selected" from="BattleMenu/MenuPosition/MenuContainer/ItemList" to="." method="_on_item_list_resource_selected"]
[connection signal="option_selected" from="BattleMenu/MenuPosition/MenuContainer/ContextMenu" to="." method="_on_context_menu_option_selected"]
